--- a/CarService.csproj
+++ b/CarService.csproj
@@ -45,8 +45,12 @@
   <ItemGroup>
     <Compile Include="Car.cs" />
     <Compile Include="CarService.cs" />
+    <Compile Include="DataBase.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SparePart.cs" />
+    <Compile Include="UserUtils.cs" />
+    <Compile Include="Warehouse.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
