--- a/CarService.csproj
+++ b/CarService.csproj
@@ -46,6 +46,7 @@
   <ItemGroup>
     <Compile Include="Car.cs" />
     <Compile Include="CarService.cs" />
+    <Compile Include="CreatorCar.cs" />
     <Compile Include="DataBase.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
